js/js.translator/testData/incremental/invalidationWithPL/changeFunctionSignature/main/test.0.kt
fun test(): Int {
    try {
        return foo()
    } catch (e: Error) {
        return 1
    }
}
